# echecs-par-renforcement

./: .gitignore  00_chess.ipynb  01_setting-up.ipynb  02_random.md  03_game-representation.ipynb  04_queues-stacks-trees-and-graphs.ipynb  README.md  bostjan-mejak-chess.py  bostjan-mejak-chess_0_random.py  pyproject.toml  test_game.pgn  tmp-sketch.ipynb
.ipynb_checkpoints/: 02_random-checkpoint.md  04_queues-stacks-trees-and-graphs-checkpoint.ipynb  README-checkpoint.md
code/: aux_06.py  rl.py
data/: lichess_study_carlsen-caruana-world-championship-match_7-game_by_PiPiCPacmMp_2018.11.10.pgn  metrosp_stations_v2.json  toy_stations_graph.p
deprecated/notas/: 0b0000_pesquisa.ipynb  0b0001_representacao-teste-1.ipynb
deprecated/notas/xadrez/: 02_random.md  03_game-representation.ipynb
fine-tuning/: debug.py  lab.ipynb  mistralai_finetuning_v0.py  mistralai_use_model_v0.py  phi2_finetuning_v1.py  phi2_finetuning_v2.py  phi2_use_model_v1.py  phi2_use_model_v2.py  use_model.py
fine-tuning/lora/: lab.ipynb  phi2_finetuning_v1.py  phi2_finetuning_v2.py  phi2_use_model_v1.py  phi2_use_model_v2.py
fine-tuning/lora/wandb/: latest-run
fine-tuning/qlora/: continue-training.py  maritaca-finetuning.py  qlora.py  training-config.py
fine-tuning/qlora/wandb/: latest-run
llm-fine-tuning/lora/: phi2_finetuning_v0.py
llm-fine-tuning/qlora/: maritaca-finetuning_v1.py  qlora-usage.py
llm-langgraph/: agents.py  custom_types.py  main.py  pyproject.toml
llm-langgraph/deprec/: config.py  graph.py
llm-langgraph/warming_01/: lab.ipynb  lab.py
llm-langgraph/warming_02/: lab.py
llm-langgraph/warming_03/: lab.py
notas/: 00_pesquisa.ipynb  01_setting-up.md  03_game-representation.ipynb  05_toy-systems.ipynb  06_mdp.ipynb  0b0000_d3rlpy.ipynb  0b0000_pesquisa.ipynb  0b0001_representacao-teste-2.ipynb  0b0001_representacao.ipynb
notas/arquivos/: lichess_pgn_2019.11.20_naosoudoramo_vs_Cartoni.IZbcH0eO.pgn
notas/code/: bostjan-mejak-chess_0_random.py
notas/data/: metrosp_stations.json  metrosp_stations_v3.json  stations.json  time-heuristic.ods  toy_stations_costs.p
notas/tmp/: tmp-sketch_2.ipynb
notas/xadrez/: 00_chess.ipynb
tabpfn/: lab.ipynb
tmp/: tmp-sketch_3.ipynb  tmp-sketch_4.ipynb
(+21 files in other folders)
